lang/tooling/fol-editor/tree-sitter/test/corpus/v3_ownership.txt
==================
V3 Ownership
==================

typ Parcel: rec = {
    value: int,
};

fun[] ownership(owner: Parcel): int = {
    @var heap: Parcel = { value = 1 };
    ~var replacement: Parcel = { value = 2 };
    var[bor] view: Parcel = owner;
    var[mut] mutable_owner: Parcel = replacement;
    var[mut, bor] mutable_view: Parcel = mutable_owner;
    mutable_view.value = heap.value;
    !mutable_view;
    !view;
    return mutable_owner.value;
};

---

(source_file
  (typ_decl
    (identifier)
    (record_type)
    (type_block
      (record_field
        (typed_binding
          (identifier)
          (type_expr
            (identifier))))))
  (fun_decl
    (decl_modifiers)
    (plain_fun_decl
      (identifier)
      (params
        (param
          (identifier)
          (type_expr
            (identifier))))
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (record_literal
                  (field_init
                    (identifier)
                    (expr
                      (expr_atom
                        (integer_literal)))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (record_literal
                  (field_init
                    (identifier)
                    (expr
                      (expr_atom
                        (integer_literal)))))))))
        (stmt
          (var_decl
            (decl_modifiers
              (modifier_list
                (identifier)))
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (identifier)))))
        (stmt
          (var_decl
            (decl_modifiers
              (modifier_list
                (identifier)))
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (identifier)))))
        (stmt
          (var_decl
            (decl_modifiers
              (modifier_list
                (identifier)
                (identifier)))
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (identifier)))))
        (stmt
          (assignment_stmt
            (field_access
              (identifier)
              (identifier))
            (expr
              (expr_atom
                (field_access
                  (identifier)
                  (identifier))))))
        (stmt
          (expr
            (unary_expr
              (expr_atom
                (identifier)))))
        (stmt
          (expr
            (unary_expr
              (expr_atom
                (identifier)))))
        (stmt
          (return_stmt
            (expr
              (expr_atom
                (field_access
                  (identifier)
                  (identifier))))))))))

==================
V3 Existing Borrow Parameter Forwarding
==================

typ Parcel: rec = {
    value: int,
};

fun[] inspect(parcel[bor]: Parcel): int = {
    return parcel.value;
};

fun[] main(): int = {
    var owner: Parcel = { value = 7 };
    var[bor] view: Parcel = owner;
    var first: int = inspect(view);
    var second: int = inspect(view);
    !view;
    return first + second;
};

---

(source_file
  (typ_decl
    (identifier)
    (record_type)
    (type_block
      (record_field
        (typed_binding
          (identifier)
          (type_expr
            (identifier))))))
  (fun_decl
    (decl_modifiers)
    (plain_fun_decl
      (identifier)
      (params
        (param
          (identifier)
          (parameter_options)
          (type_expr
            (identifier))))
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (return_stmt
            (expr
              (expr_atom
                (field_access
                  (identifier)
                  (identifier)))))))))
  (fun_decl
    (decl_modifiers)
    (plain_fun_decl
      (identifier)
      (params)
      (return_type
        (type_expr
          (identifier)))
      (block
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (record_literal
                  (field_init
                    (identifier)
                    (expr
                      (expr_atom
                        (integer_literal)))))))))
        (stmt
          (var_decl
            (decl_modifiers
              (modifier_list
                (identifier)))
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (identifier)))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (call_expr
                  (identifier)
                  (call_arg
                    (expr
                      (expr_atom
                        (identifier)))))))))
        (stmt
          (var_decl
            (typed_binding
              (identifier)
              (type_expr
                (identifier)))
            (expr
              (expr_atom
                (call_expr
                  (identifier)
                  (call_arg
                    (expr
                      (expr_atom
                        (identifier)))))))))
        (stmt
          (expr
            (unary_expr
              (expr_atom
                (identifier)))))
        (stmt
          (return_stmt
            (expr
              (binary_expr
                (expr_atom
                  (identifier))
                (expr
                  (expr_atom
                    (identifier)))))))))))
